--- a/04-flexbox-maquetacion/style.css
+++ b/04-flexbox-maquetacion/style.css
@@ -36,8 +36,11 @@ body{
     overflow: hidden;
 }
 .card-content{
+
+    font-family: sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 0 30px;
+    gap: 15px;
 }
